# rethink

./: .dockerignore  .env.test.development  .env.test.local  .flake8  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  README_ZH.md  dockerBuild.sh  log-config.json  main.py  requirements.txt  run.sh  run_in_docker.py  setup.cfg  tox.ini
.github/workflows/: docker-image.yml  python-app.yml  python-publish.yml  python-tests.yml
src/rethink/: .env.local  __init__.py  _version.py  application.py  config.py  const.py  logger.py  regex.py  run.py  safety.py  utils.py
src/rethink/controllers/: __init__.py  account.py  app_system.py  auth.py  email.py  oauth.py  plugin.py  recent.py  user.py  utils.py
src/rethink/controllers/files/: upload_files.py
src/rethink/controllers/node/: node_ops.py  search.py  trash_ops.py
src/rethink/controllers/schemas/: __init__.py  account.py  app_system.py  base.py  files.py  node.py  oauth.py  plugin.py  recent.py  search.py  user.py  verification.py
src/rethink/controllers/search/: node_search.py
src/rethink/controllers/user/: forget_password.py  (+2 more)
src/rethink/core/: __init__.py  node.py  recent.py  search.py  user.py
src/rethink/dist-local/: index.html
src/rethink/models/: __init__.py  client.py  coll.py  database.py  db_ops.py  files.py  indexing.py  node.py  search.py  tps.py  user.py  utils.py  verification.py
src/rethink/mongita/: collection.py  common.py  errors.py  mongita_client.py  mongitasync.py
src/rethink/plugins/: __init__.py  base.py  handler.py  register.py
src/rethink/routes/: account.py  app_captcha.py  app_system.py  email.py  files.py  node.py  oauth.py  plugin.py  recent.py  search.py  self_hosted.py  trash.py  user.py  utils.py  verification.py
src/rethink/sso/: base.py  gitlab.py  google.py
src/rethink/version_manager/: __init__.py  migrate.py  recover.py
src/retk/: .env.local  __init__.py  _version.py  application.py  config.py  const.py  httpx_helper.py  logger.py  regex.py  run.py  safety.py  utils.py
src/retk/const/: __init__.py  app.py  languages.py  new_user_default.py  node_display.py  node_types.py  notice.py  response_codes.py  settings.py  user_behavior_types.py  user_sources.py  user_types.py
src/retk/controllers/: account.py  admin.py  app_system.py  browser_extension.py  manager.py  notice.py  oauth.py  plugin.py  recent.py  self_hosted.py  statistic.py  user.py  utils.py
src/retk/core/: __init__.py  analysis.py  browser_extension.py  notice.py  recent.py  self_hosted.py  statistic.py  user.py
src/retk/dist-local/: index.html
src/retk/local_manager/: __init__.py  llm.py  migrate.py  recover.py
src/retk/models/: client.py  coll.py  db_ops.py  indexing.py  tps.py
src/retk/plugins/: base.py  handler.py  register.py
src/retk/routes/: account.py  admin.py  ai.py  app_captcha.py  app_system.py  browser_extension.py  files.py  manager.py  node.py  notice.py  oauth.py  plugin.py  recent.py  self_hosted.py  statistic.py  trash.py  user.py  utils.py
src/retk/utils/: __init__.py  auth.py  markdown.css  md.py  process_data.py
src/retk/version_manager/: __init__.py  migrate.py  recover.py
tests/: test_account.py  test_ai_llm_api.py  test_ai_llm_knowledge.py  test_ai_utils.py  test_api.py  test_auth.py  test_core_async_task.py  test_core_files.py  test_core_files_obsidian.py  test_core_local.py  test_core_remote.py  test_core_scheduler.py  test_core_utils.py  test_data_restore.py  test_llm.py  test_local_manager.py  test_model_indexing.py  test_models.py  test_models_files.py  test_models_files_unzip.py  test_models_local.py  test_models_remote.py  test_models_utils.py  test_plugins.py  test_run.py  test_search_es.py  test_search_local.py  test_sso.py  test_tfidf.py  test_utils.py  test_verification.py  test_version_manager.py  utils.py
(+212 files in other folders)
