[metadata]
name = rethink-note
version = 0.2.3
author = MorvanZhou
author_email = morvanzhou@hotmail.com
description = note taking app
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MorvanZhou/rethink
project_urls =
    Bug Tracker = https://github.com/MorvanZhou/rethink/issues
    Source=https://github.com/MorvanZhou/rethink
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.95.2
    pydantic[email]>=2.1.1
    pydantic-settings>=2.0.3
    uvicorn[standard]
    pyjwt[crypto]>=2.8.0
    bcrypt>=4.0.1
    sortedcontainers>=2.3,<3.0
    pymongo>=4.6.0
    markdown>=3.4.4
    oauthlib>=3.2.2
    httpx>=0.25.0
    captcha>=0.5.0
    python-multipart>=0.0.6
    cos-python-sdk-v5>=1.9.26
    numpy>=1.24.4
    whoosh>=2.7.4
    jieba>=0.42.1
    starlette>=0.27.0
    jinja2>=3.1.3

[options.packages.find]
where = src

[options.package_data]
rethink =
    dist-local/**/*
    .env.local
    models/search_engine/*.txt
    plugins/official_plugins/**/*
[options.extras_require]
build =
    tox==3.24.3
    tox-conda
    build
    twine
    pylint
remote =
    motor>=3.3.2
    elasticsearch[async]~=8.11.0
