[metadata]
name = retk
version = 0.3.0
author = MorvanZhou
author_email = morvanzhou@hotmail.com
description = keep and reuse your thoughts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MorvanZhou/rethink
project_urls =
    Bug Tracker = https://github.com/MorvanZhou/rethink/issues
    Source=https://github.com/MorvanZhou/rethink
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    fastapi>=0.95.2,<1.0.0
    pydantic[email]>=2.1.1
    pydantic-settings~=2.0.3
    uvicorn[standard]>=0.23.2,<1.0.0
    pyjwt[crypto]~=2.8.0
    bcrypt~=4.0.1
    sortedcontainers>=2.3,<3.0
    pymongo>=4.6.0
    markdown>=3.4.4
    oauthlib>=3.2.2
    httpx>=0.25.0
    python-multipart>=0.0.6
    whoosh~=2.7.4
    jieba>=0.42.1
    starlette>=0.27.0
    jinja2~=3.1.3
    apscheduler~=3.10.4
    cryptography~=41.0.3

[options.packages.find]
where = src

[options.package_data]
retk =
    dist-local/**/*
    .env.local
    models/search_engine/*.txt
    plugins/official_plugins/**/*
    core/ai/llm/knowledge/*.md
    utils/markdown.css

[options.extras_require]
build =
    tox==3.24.3
    tox-conda
    build
    twine
    pylint
remote =
    captcha>=0.5.0
    motor>=3.3.2
    elasticsearch[async]~=8.11.0
    cos-python-sdk-v5~=1.9.29
    aiofiles~=24.1.0

[flake8]
per-file-ignores =
    */__init__.py: F401
ignore = C901,E126,E501
exclude =
    /venv,
    /.tox,
    /**/.data,
    /tests,
    /**/*.egg-info,
    /dist,
    /logs,
    **/__pycache__,
    /.run,
    **/.env*,
    /.gitignore,
    /.pylintrc,
    /.dockerignore,
    .idea,
    .git,
    .vscode,
    *.suo,
    *.ntvs*,
    *.njsproj,
    *.sln,
    *.sw?,
    /temp,
